When selecting a database for a script, the default is now to use a new DB if possible.
When installing a script that uses authentication, you can now enter a username and/or password instead of it being setup to use the domain's login details by default. Similarly, the install-script.pl command now has optional --user and --pass parameters.
When using Postfix with the sender_bcc_maps directive, a new option on the Module Config page can be used to allow BCCing all sent email in some or all domains to a separate address. This can be set on the Email Settings page, or by default for new domains in Server Templates. It can also be changed on the command line with the new modify-mail.pl script.
Removed the modify-aliascopy.pl command-line program, as it's features have been included in modify-mail.pl.
Fixed a bug that prevented mail for users with @ in their names and mbox-format mail files from being properly displayed on systems using Postfix.
When an alias domain is created, the primary domain can now update its configuration as needed. This allows AWstats to work when accessed via the alias domain.
Un-supported script versions can now be installed by the master admin .. but use this feature at your own risk!
Put back the osTicket installer, now that it is available again, and updated it to version 1.6 RC2.
Added a script installer for eTicket version 1.5.6-RC4, a fork of the osTicket project.
The system statistics graphs can now be displayed using IE, as well as Firefox.
---- Changes since 3.51 ----
Updated the Horde script installer to version 3.1.6, and the versions of several other Horde-related scripts.
Updated the Drupal installer to versions 5.6 and 4.7.11, and phpMyAdmin to 2.11.4.
When restoring a virtual server that uses features not supported on the system, a warning will be displayed listing the missing or disabled features.
Custom styles can use the nocontent=1 line in style.info to specify that no initial content needs to be entered.