@@ -816,3 +816,4 @@ Updated the Horde script installer to version 3.1.6, and the versions of several
 Updated the Drupal installer to versions 5.6 and 4.7.11, and phpMyAdmin to 2.11.4.
 When restoring a virtual server that uses features not supported on the system, a warning will be displayed listing the missing or disabled features.
 Custom styles can use the nocontent=1 line in style.info to specify that no initial content needs to be entered.
+When moving a virtual server to a new system via a restore, if any required PHP modules that were installed on the old system are missing on the new, they will be automatically installed (where possible). In addition, you will be notified if any required PHP versions are missing.
